--- a/laravel/laravel-monitor.service
+++ b/laravel/laravel-monitor.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 User=root
-ExecStart=/usr/bin/python3 /usr/local/bin/restart.py.py
+ExecStart=/usr/bin/python3 /usr/local/bin/restart.py
 Restart=always
 RestartSec=5
 
